--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <title>FTS</title>
 </head>
 
-<body>
+<body class="bg-white text-black">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
