--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>FTS</title>
 </head>
 
-<body class="bg-white text-black">
+<body class="bg-[#f5f5f5] text-black">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
